# wildfire-web-app

./: README.md  main.py  pyproject.toml  render.yaml
src/: wildfire_predictor.py
src/routes/: wildfire.py
static/: ai.css  ai.js  script.js  styles.css
templates/: about.html  ai.html  index.html
